--- a/generic.html
+++ b/generic.html
@@ -86,7 +86,7 @@
 									</a></h2>
 								</header>
 								<a href="https://github.com/PraveenManimaran/World_Happiness_Report/blob/main/Happiness_Report.pdf" class="image fit"><img src="images/WHR.png" alt="" /></a>
-								<p>In this project, I delved into the World Happiness Report 2023, a rich dataset offering insights into the factors influencing subjective well-being across diverse countries. This approach aimed to provide a better understanding of the factors impacting individuals' life satisfaction in North America, and to uncover meaningful patterns.</p>
+								<p>I delve into the World Happiness Report 2023, a rich dataset offering insights into the factors influencing subjective well-being across diverse countries. This approach aimed to provide a better understanding of the factors impacting individuals' life satisfaction in North America, and to uncover meaningful patterns.</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/PraveenManimaran/World_Happiness_Report/blob/main/Happiness_Report.pdf" class="button">View Project</a></li>
 								</ul>
@@ -94,13 +94,13 @@
 
 							<article>
 								<header>
-									<h2><a href="#">Automating Crypto Website API Pull Using Python <br />
+									<h2><a href="#">YouTube Data Analysis Project <br />
 									</a></h2>
 								</header>
-								<a href="https://github.com/PraveenManimaran/Crypto_API_Pull/blob/main/Automating%20Crypto%20Website%20API%20Pull.pdf" class="image fit"><img src="images/CoinMarketCap-to-Tackle-False-Data-Reports-with-New-Liquidity-System.png" alt="" /></a>
-								<p>This project aims at demonstrating how to automatically pull data from an API, in this case from coinmarketcap.com. I show how to pull data from the API every minute and how we can use this data to create visualizations. This code can be slightly modified to automatically pull data from any API, not just the cryptocurrency website.</p>
+								<a href="https://github.com/PraveenManimaran/YouTubeProject/blob/main/YouTube_Data_Analysis_Project.pdf" class="image fit"><img src="images/youtube-4k-.jpg" alt="" /></a>
+								<p>We analyze the Global YouTube Statistics 2023 Dataset to understand factors influencing the success of top YouTube channels worldwide. We explore the relationships between subscriber counts, video views, highest yearly earnings, and see if we can create a machine learning model that can predict any channel's subscriber counts.</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/PraveenManimaran/Crypto_API_Pull/blob/main/Automating%20Crypto%20Website%20API%20Pull.pdf" class="button">View Project</a></li>
+									<li><a href="https://github.com/PraveenManimaran/YouTubeProject/blob/main/YouTube_Data_Analysis_Project.pdf" class="button">View Project</a></li>
 								</ul>
 							</article>
 							
