--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Praveen Manimaran<br />
 						</h1>
-						<p>Data Scientist well versed in SQL, Python, Tableau, and Machine Learning  <a href="https://github.com/PraveenManimaran">@PraveenManimaran</a> 
+						<p>Data Scientist well versed in SQL, Python, and Machine Learning  <a href="https://github.com/PraveenManimaran">@PraveenManimaran</a> 
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -54,8 +54,8 @@
 							<header class="major">
 								<h1> About Me<br />
 								</h1>
-								<p><span class="image left"><img src="images/NEW_PIC.png" alt="" /></span>Hey! I am Praveen Manimaran. I recently graduated from UC Santa Barbara with a degree in Statistics and Data Science. My journey into the world of data began with a fascination for statistics, but I soon discovered my true passion lies 
-									in the dynamic field of data science and machine learning. I'm currently furthering my education and skills by pursuing a Master's degree in Data Science at UC San Diego, where I'm eager to explore the limitless possibilities that data-driven insights offer. Prior to my academic pursuits, I had the privilege of gaining real-world experience as an Area Manager Intern at Amazon. This experience provided me with invaluable insights into the world of data, analytics, and logistics. Feel free to explore my work, and if you'd like to connect or collaborate, don't hesitate to reach out. Let's explore the data-driven future together!</p>
+								<p><span class="image left"><img src="images/NEW_PIC.png" alt="" /></span>Hey! I am Praveen Manimaran. I am currently pursuing a master's degree in Data Science at UC San Diego. Previously, I graduated from UC Santa Barbara with a degree in Statistics and Data Science. My journey into the world of data began with a fascination for statistics, but I soon discovered my true passion lies 
+									in the dynamic field of data science and machine learning. This past summer, I had the privilege of gaining real-world experience as a Data Science Intern at Lawrence Livermore National Laboratory. This experience provided me with invaluable insights into the world of data, analytics, and MLOps. Feel free to explore my work, and if you'd like to connect or collaborate, don't hesitate to reach out. Let's explore the data-driven future together!</p>
 								</p>
 							</header>
 						</section>
