Update Website With New Projects
Add New Projects to Website

--- a/generic.html
+++ b/generic.html
@@ -42,15 +42,12 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/PraveenManimaran/NBA-MVP-Predictor">NBA MVP Predictor<br />
-									</a></h2>
-									<p>Predicting the NBA's Most Valuable Player through the use of <br />
-									machine learning algorithms: Linear Regression, Ridge Regression,<br />
-									Random Forest, and Boosted Trees</p>
+									<h2><a href="https://github.com/PraveenManimaran/YouTubeScriptGenerator">YouTube Script Generator<br /></a></h2>
+									<p>Developed a YouTube script generator using GPT-4 to automate the creation of engaging video content by generating titles and scripts based on user-defined prompts. I utilized LangChain for memory-based interactions across multiple prompts within Streamlit.</p>
 								</header>
-								<a href="https://github.com/PraveenManimaran/NBA-MVP-Predictor" class="image main"><img src="images/Lebron_MVP.jpg" alt="" /></a>
+								<a href="https://github.com/PraveenManimaran/YouTubeScriptGenerator" class="image main"><img src="images/youtube_script.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/PraveenManimaran/NBA-MVP-Predictor" class="button large">View Project</a></li>
+									<li><a href="https://github.com/PraveenManimaran/YouTubeScriptGenerator" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -58,11 +55,44 @@
 						<section class="posts">
 							<article>
 								<header>
+									<h2><a href="#">Traffic Sign Detection Model</a></h2>
+								</header>
+								<a href="https://github.com/PraveenManimaran/TrafficSignDetectionModel" class="image fit"><img src="images/traffic_sign.jpg" alt="" /></a>
+								<p>Implemented a YOLOv5-based Traffic Sign Detection Model using deep learning to accurately perform real-time detection of four distinct traffic sign classes: Traffic Light, Stop, Speed Limit, and Crosswalk.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/PraveenManimaran/TrafficSignDetectionModel" class="button">View Project</a></li>
+								</ul>
+							</article>
+					
+							<article>
+								<header>
+									<h2><a href="#">AI Chatbot</a></h2>
+								</header>
+								<a href="https://github.com/PraveenManimaran/AICChatbot" class="image fit"><img src="images/ai_chatbot.jpg" alt="" /></a>
+								<p>Created an interactive chatbot with Flask and OpenAI API for real-time user engagement.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/PraveenManimaran/AICChatbot" class="button">View Project</a></li>
+								</ul>
+							</article>
+
+							<article>
+								<header>
+									<h2><a href="https://github.com/PraveenManimaran/NBA-MVP-Predictor">NBA MVP Predictor</a></h2>
+								</header>
+								<a href="https://github.com/PraveenManimaran/NBA-MVP-Predictor" class="image fit"><img src="images/Lebron_MVP.jpg" alt="" /></a>
+								<p>Built a model that can predict the NBA's Most Valuable Player using Linear Regression, Ridge, Random Forest, and Boosted Trees.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/PraveenManimaran/NBA-MVP-Predictor" class="button">View Project</a></li>
+								</ul>
+							</article>
+
+							<article>
+								<header>
 									<h2><a href="#">Temperature Time<br />
 									Series Analysis</a></h2>
 								</header>
 								<a href="https://github.com/PraveenManimaran/Time-Series-Analysis" class="image fit"><img src="images/LA_Temp.jpg" alt="" /></a>
-								<p>This project focuses on analyzing and exploring the monthly weather patterns in Downtown Los Angeles using the SARIMA and Lagged Regression method. The purpose of this study is to gain insights into the presence of global warming, understand seasonal variations, and identify any significant trends or patterns in the weather data.</p>
+								<p>Performed Time Series Analysis on monthly weather patterns in Downtown Los Angeles using the SARIMA and Lagged Regression methods. The purpose of this study is to gain insights into the presence of global warming, understand seasonal variations, and identify any significant trends or patterns in the weather data.</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/PraveenManimaran/Time-Series-Analysis" class="button">View Project</a></li>
 								</ul>
@@ -98,7 +128,7 @@
 									</a></h2>
 								</header>
 								<a href="https://github.com/PraveenManimaran/YouTubeProject/blob/main/YouTube_Data_Analysis_Project.pdf" class="image fit"><img src="images/youtube-4k-.jpg" alt="" /></a>
-								<p>We analyze the Global YouTube Statistics 2023 Dataset to understand factors influencing the success of top YouTube channels worldwide. We explore the relationships between subscriber counts, video views, highest yearly earnings, and see if we can create a machine learning model that can predict any channel's subscriber counts.</p>
+								<p>Performed Data Analysis on the Global YouTube Statistics 2023 Dataset to understand factors influencing the success of top YouTube channels worldwide. I explore the relationships between subscriber counts, video views, highest yearly earnings, and explore the possibilities of creating a machine learning model that can predict any channel's subscriber counts.</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/PraveenManimaran/YouTubeProject/blob/main/YouTube_Data_Analysis_Project.pdf" class="button">View Project</a></li>
 								</ul>
