--- a/generic.html
+++ b/generic.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>About Me</title>
@@ -42,17 +37,54 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/PraveenManimaran/YouTubeScriptGenerator">YouTube Script Generator<br /></a></h2>
-									<p>Developed a YouTube script generator using GPT-4 to automate the creation of engaging video content by generating titles and scripts based on user-defined prompts. I utilized LangChain for memory-based interactions across multiple prompts within Streamlit.</p>
+									<h2><a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot">Agentic AI Trading<br /></a></h2>
+									<p>Financial markets are dynamic and complex, requiring quick, data-driven decisions. This project involves developing an AI agent that can autonomously make trading decisions based on real-time data analysis, market sentiment, historical patterns, and predictive models. Agentic AI refers to AI systems that act autonomously towards goals, making this ideal for trading where timing and strategy are critical.</p>
 								</header>
-								<a href="https://github.com/PraveenManimaran/YouTubeScriptGenerator" class="image main"><img src="images/youtube_script.png" alt="" /></a>
+								<a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot" class="image main"><img src="images/ai_agent_bot.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/PraveenManimaran/YouTubeScriptGenerator" class="button large">View Project</a></li>
+									<li><a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
 					<!-- Posts -->
 						<section class="posts">
+
+							<article>
+								<header>
+									<h2><a href="#">Cold Email Generator</a></h2>
+								</header>
+								<a href="https://github.com/PraveenManimaran/Cold-Email-Generator" class="image fit"><img src="images/cold_email.png" alt="" /></a>
+								<p>Built using Groq, LangChain, and Streamlit, this tool helps businesses connect with potential clients by extracting job listings from a company's careers page and generating customized cold emails.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/PraveenManimaran/Cold-Email-Generator" class="button">View Project</a></li>
+								</ul>
+							</article>
+
+
+							<article>
+								<header>
+									<h2><a href="#">Semantic Book Recommender</a></h2>
+								</header>
+								<a href="https://github.com/PraveenManimaran/Semantic-Book-Recommender" class="image fit"><img src="images/book_recommender.png" alt="" /></a>
+								<p>Developed an AI-powered system that recommends books based on natural language queries. The system leverages large language models (LLMs) and vector search to provide book recommendations based on themes, emotions, and classifications.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/PraveenManimaran/Semantic-Book-Recommender" class="button">View Project</a></li>
+								</ul>
+							</article>
+
+
+							<article>
+								<header>
+									<h2><a href="#">YouTube Script Generator</a></h2>
+								</header>
+								<a href="https://github.com/PraveenManimaran/YouTubeScriptGenerator" class="image fit"><img src="images/youtube_script.png" alt="" /></a>
+								<p>Developed a YouTube script generator using GPT-4 to automate the creation of engaging video content by generating titles and scripts based on user-defined prompts.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/PraveenManimaran/YouTubeScriptGenerator" class="button">View Project</a></li>
+								</ul>
+							</article>
+
+
 							<article>
 								<header>
 									<h2><a href="#">Traffic Sign Detection Model</a></h2>
