Add DataSage Project
Add DataSage Project to Projects Category

--- a/projects.html
+++ b/projects.html
@@ -37,21 +37,31 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2><a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot">Agentic AI Trading<br /></a></h2>
-									<p>Financial markets are dynamic and complex, requiring quick, data-driven decisions. This project involves developing an AI agent that can autonomously make trading decisions based on real-time data analysis, market sentiment, historical patterns, and predictive models. Agentic AI refers to AI systems that act autonomously towards goals, making this ideal for trading where timing and strategy are critical.</p>
-								</header>
-								<a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot" class="image main"><img src="images/ai_agent_bot.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot" class="button large">View Project</a></li>
-								</ul>
-							</article>
+                        <!-- Featured Post -->
+                            <article class="post featured">
+                                <header class="major">
+                                    <h2><a href="https://datasageviz.netlify.app">DataSage – Interactive Data Analysis Web App</a></h2>
+                                    <p>DataSage is a full‑stack, web‑based analytics platform that automates data profiling and summarization. It intelligently detects data types and bins variables to instantly render survival curves, histograms, and categorical plots. This app helps streamline early‑stage exploratory analysis with interactive, real‑time visualizations.</p>
+                                </header>
+                                <a href="https://datasageviz.netlify.app" class="image main"><img src="images/datasage-hero.png" alt="DataSage – Interactive Data Analysis Web App" /></a>
+                                <ul class="actions special">
+                                    <li><a href="https://datasageviz.netlify.app" class="button large">View Live</a></li>
+                                </ul>
+                            </article>
 
 					<!-- Posts -->
-						<section class="posts">
-							<!-- (All other project articles from generic.html go here, unchanged) -->
+                        <section class="posts">
+                            <!-- (All other project articles from generic.html go here, unchanged) -->
+                            <article>
+                                <header>
+                                    <h2><a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot">Agentic AI Trading</a></h2>
+                                </header>
+                                <a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot" class="image fit"><img src="images/ai_agent_bot.jpg" alt="" /></a>
+                                <p>Financial markets are dynamic and complex, requiring quick, data-driven decisions. This project involves developing an AI agent that can autonomously make trading decisions based on real-time data analysis, market sentiment, historical patterns, and predictive models. Agentic AI refers to AI systems that act autonomously towards goals, making this ideal for trading where timing and strategy are critical.</p>
+                                <ul class="actions special">
+                                    <li><a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot" class="button">View Project</a></li>
+                                </ul>
+                            </article>
 							<article>
 								<header>
 									<h2><a href="#">Cold Email Generator</a></h2>
