--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,6 @@
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="projects.html">Projects</a></li>
 							<li><a href="techstack.html">Tech Stack</a></li>
-							<li><a href="resume.html">Resume</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 						<ul class="icons">
@@ -40,28 +39,40 @@
                         <!-- Featured Post -->
                             <article class="post featured">
                                 <header class="major">
-                                    <h2><a href="https://datasageviz.netlify.app">DataSage – Interactive Data Analysis Web App</a></h2>
-                                    <p>DataSage is a full‑stack, web‑based analytics platform that automates data profiling and summarization. It intelligently detects data types and bins variables to instantly render survival curves, histograms, and categorical plots. This app helps streamline early‑stage exploratory analysis with interactive, real‑time visualizations.</p>
+                                    <h2><a href="https://github.com/PraveenManimaran/english-to-sql-llm">Fine-Tuning Llama-3 For SQL Query Generation</a></h2>
+                                    <p>Built an English-to-SQL system using schema-aware prompting, LoRA fine-tuning, and execution-guided decoding to reduce query errors by 25%. Deployed the model as a FastAPI REST API for seamless application integration.</p>
                                 </header>
-                                <a href="https://datasageviz.netlify.app" class="image main"><img src="images/datasage-hero.png" alt="DataSage – Interactive Data Analysis Web App" /></a>
+                                <a href="https://github.com/PraveenManimaran/english-to-sql-llm" class="image main"><img src="images/llama-3.jpg" alt="Fine-Tuning Llama-3 For SQL Query Generation" /></a>
                                 <ul class="actions special">
-                                    <li><a href="https://datasageviz.netlify.app" class="button large">View Live</a></li>
+                                    <li><a href="https://github.com/PraveenManimaran/english-to-sql-llm" class="button large">View Project</a></li>
                                 </ul>
                             </article>
 
 					<!-- Posts -->
                         <section class="posts">
                             <!-- (All other project articles from generic.html go here, unchanged) -->
-                            <article>
-                                <header>
-                                    <h2><a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot">Agentic AI Trading</a></h2>
-                                </header>
-                                <a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot" class="image fit"><img src="images/ai_agent_bot.jpg" alt="" /></a>
-                                <p>Financial markets are dynamic and complex, requiring quick, data-driven decisions. This project involves developing an AI agent that can autonomously make trading decisions based on real-time data analysis, market sentiment, historical patterns, and predictive models. Agentic AI refers to AI systems that act autonomously towards goals, making this ideal for trading where timing and strategy are critical.</p>
-                                <ul class="actions special">
-                                    <li><a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot" class="button">View Project</a></li>
-                                </ul>
-                            </article>
+
+							<article>
+								<header>
+									<h2><a href="#">DreamWeaver - AI Bedtime Storyteller</a></h2>
+								</header>
+								<a href="https://ai-bedtime-storyteller-demo.vercel.app/" class="image fit"><img src="images/ai-bedtime-pic.png" alt="DreamWeaver - AI Bedtime Storyteller" /></a>
+								<p>An AI-powered web app that generates personalized, age-appropriate bedtime stories based on a child’s name, age, and interests. Built with Next.js, React, and Tailwind CSS, it combines real-time content generation with safe, engaging narratives for an enjoyable storytelling experience.</p>
+								<ul class="actions special">
+									<li><a href="https://ai-bedtime-storyteller-demo.vercel.app/" class="button">Live Demo</a></li>
+								</ul>
+							</article>
+
+							<article>
+								<header>
+									<h2><a href="#">DataSage – Interactive Data Analysis Web App</a></h2>
+								</header>
+								<a href="https://datasageviz.netlify.app" class="image fit"><img src="images/datasage-hero.png" alt="DataSage – Interactive Data Analysis Web App" /></a>
+								<p>DataSage is a full‑stack, web‑based analytics platform that automates data profiling and summarization. It intelligently detects data types and bins variables to instantly render survival curves, histograms, and categorical plots. This app helps streamline early‑stage exploratory analysis with interactive, real‑time visualizations.</p>
+								<ul class="actions special">
+									<li><a href="https://datasageviz.netlify.app" class="button">Live Demo</a></li>
+								</ul>
+							</article>	
 							<article>
 								<header>
 									<h2><a href="#">Cold Email Generator</a></h2>
@@ -72,6 +83,18 @@
 									<li><a href="https://github.com/PraveenManimaran/Cold-Email-Generator" class="button">View Project</a></li>
 								</ul>
 							</article>
+
+                            <article>
+                                <header>
+                                    <h2><a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot">Agentic AI Trading</a></h2>
+                                </header>
+                                <a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot" class="image fit"><img src="images/ai_agent_bot.jpg" alt="" /></a>
+                                <p>Financial markets are dynamic and complex, requiring quick, data-driven decisions. This project involves developing an AI agent that can autonomously make trading decisions based on real-time data analysis, market sentiment, historical patterns, and predictive models. Agentic AI refers to AI systems that act autonomously towards goals, making this ideal for trading where timing and strategy are critical.</p>
+                                <ul class="actions special">
+                                    <li><a href="https://github.com/PraveenManimaran/Agentic-AI-Trading-Bot" class="button">View Project</a></li>
+                                </ul>
+                            </article>
+							
 							
                             <article>
 								<header>
